--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-1.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-943.2KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.46MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-17.83MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-997.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-18.54MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-154.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-302.2KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
-  - {name: 🇬🇧 英国-233.5KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-584.6KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇨🇳 中国-6.48MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.10MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-969.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-943.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-154.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-302.2KB/s(Youtube:不良林)
-      - 🇬🇧 英国-233.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-584.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-969.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
