--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-243.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-997.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-12.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.93MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-908.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-521.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-1.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇭🇰 香港-778.7KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇦 加拿大-764.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-5.81MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.12MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
-      - 🇯🇵 日本-243.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-997.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-908.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-521.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.03MB/s(Youtube:不良林)
       - 🇭🇰 香港-778.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-764.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
